<resources>
    <string name="app_name">모닝 루틴</string>
    <string name="plan">일정</string>
    <string name="reward">보상</string>
    <string name="graph">통계</string>
    <string name="option">옵션</string>
    <string name="roll_back">취소</string>
    <string name="wake_time">기상 시간</string>
    <string name="sleep_time">취침 시간</string>
    <string name="init_wake_time">07:00</string>
    <string name="init_sleep_time">23:30</string>
    <string name="three_1">걸음 수</string>
    <string name="three_2">시간</string>
    <string name="three_3">실행여부</string>
    <string name="which_archive">어떤 목표를 세우시겠습니까?</string>
    <string name="only_show_3">실행 여부만 확인합니다</string>
    <string name="plz_add_plan">일정을 추가해 주세요</string>
    <string name="save">저장</string>
    <string name="empty_bar">|</string>
    <string name="edit_plan">계획 수정</string>
    <string name="delete_plan">계획 삭제</string>
    <string name="move_to_plan">예정된 plan 으로 이동</string>
    <string name="goto_main">메인으로 이동</string>
    <string name="alarm_stop">정지</string>
    <string name="timer_parser">:</string>
    <string name="start">시작</string>
    <string name="go_back">닫기</string>
    <string name="cancel">취소하기</string>
    <string name="fin">완료</string>
    <string name="daily_walk">하루 걷기</string>
    <string name="walk_count">걸음수 :</string>
    <string name="init_0">0</string>
    <string name="forgive">포기하기</string>
    <string name="success">성공</string>
    <string name="walk_progress">진행도: 0%</string>

    <string name="first_instance">첫번째 항목</string>
    <string name="sec_instance">두번째 항목</string>
    <string name="third_instance">세번째 항목</string>

    <string name="chohm">조현민</string>
    <string name="leeyy">이영윤</string>
    <string name="hz">허제</string>
    <string name="kimbg">김부경</string>

    <string name="option_update">   업데이트</string>
    <string name="option_update_info">    업데이트 정보</string>
    <string name="need_update">업데이트가 필요합니다      </string>
    <string name="not_need_update">최신 버전 입니다      </string>
    <string name="Questions">   문의사항</string>
    <string name="one_by_one_Questions">    1 : 1 문의(이메일)</string>
    <string name="extra_info">   추가 정보</string>
    <string name="service_info">    서비스 안내</string>
    <string name="copyright_title">    저작권 정보</string>
    <string name="developer_info">    개발자 정보</string>
    <string name="music_copyright">백색소음 관련 저작 정보\nThe Closing of Summer(Asher Fulero)</string>
    <string name="alarm_sound_copyright">알람 소리 관련 저작 정보\nmorning alarm : Grut(Patrick Patrikios)\nnight alarm : Your Love(Yung Logos)</string>
    <string name="code_copyright">코드 관련 저작 정보\n캘린더 관련\n링크 : https://github.com/prolificinteractive/material-calendarview/blob/master/LICENSE\n\n
Copyright (c) 2018 Prolific Interactive

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.</string>
    <string name="option_service_vision">one day, one routine</string>
    <string name="option_service_extra_info">미라클 모닝을 도와주는 앱입니다\n알람을 설정하고, 아침 과업을 달성해 보세요</string>
    <string name="leeyy_todo">201700000\n\n- 보상UI\n- 통계</string>
    <string name="hz_todo">201700000\n\n- Firebase 연동\n보상 DB\n통계 DB</string>
    <string name="kbg_todo">202035300\n\n- 알람\n- 옵션UI</string>
    <string name="chm_todo">202035390\n\n- 일정UI\n- 일정 DB\n- 옵션 UI</string>

    <string-array name="day_kor">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>

    <string-array name="month_kor">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>

</resources>